# util-linux

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  fix-cmake-vs-clang.py  fix-cmake-vs-clang.pyproj  fix-cmake-vs-clang.sln  fix-cmake-vs-clangv2.sln  gpt_reserved_typenames.patch  mybuild.txt  mybuildlog.txt
include/: c.h  debug.h
lib/: strutils.c
libblkid/: CMakeLists.txt
libblkid/samples/: partitions.c
libblkid/src/: cache.c
libblkid/src/partitions/: gpt.c  partitions.c  partitions.h
libuuid/src/: gen_uuid.c
misc-utils/: CMakeLists.txt
windevblk/: CMakeLists.txt
windevblk/include/: windevblk.h
windevblk/src/: CMakeLists.txt  dllmain.c  get_osfhandle-nothrow.c  windevblk.c  windevblk.def  windevblk_list.c  windevblk_list.h  windevblk_notif.c  windevblk_posix.c  windevblk_sysfs.c
windevblk/test/: CMakeLists.txt  windevblk_test.c
